# chess

./: README.md  build.cmd  build.sh
.github/workflows/: cpp-ci-ubuntu.yml  cpp-ci-windows.yml  cpp-ci.yml
src/: CMakeLists.txt  HelpWindow.cpp  HelpWindow.h  ImageManager.cpp  ImageManager.h  MainWindow.cpp  MainWindow.h  MenuWindow.cpp  MenuWindow.h  OptionWindow.cpp  OptionWindow.h  Player.cpp  Player.h  PlayerManager.cpp  PlayerManager.h  PlayerSelectionWindow.cpp  PlayerSelectionWindow.h  Position.cpp  Position.h  SoundManager.cpp  SoundManager.h  SpaceShip.cpp  SpaceShip.h  Utils.h  main.cpp
